--- a/style.css
+++ b/style.css
@@ -192,8 +192,8 @@ a:visited {
 /* MAP */
 #map {
   flex: 1;
-  /* height: 90%; */
-  height: 100%;
+  height: 90%;
+  /* height: 100%; */
   background-color: var(--color-light--1);
 }
 
@@ -219,7 +219,7 @@ a:visited {
 .cycling-popup .leaflet-popup-content-wrapper {
   border-left: 5px solid var(--color-brand--1);
 }
-/* .buttons {
+.buttons {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -233,4 +233,59 @@ a:visited {
 .buttons button {
   width: 25%;
   height: 50%;
-} */
+  background-color: var(--color-dark--2);
+  cursor: pointer;
+  color: white;
+  border: 0.1px solid rgb(53, 53, 53);
+}
+.modal {
+  color: black;
+  z-index: 1000;
+  position: absolute;
+  width: 40%;
+  height: 90%;
+  background-color: white;
+  display: flex;
+  align-self: center;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  left: 30%;
+  right: 30%;
+  font-size: 3rem;
+  padding: 2rem;
+  text-align: center;
+  border-radius: 2rem;
+}
+.close__continue {
+  display: flex;
+  justify-content: space-around;
+  align-items: end;
+  width: 100%;
+  height: 20%;
+}
+.close__continue > button {
+  width: 40%;
+  height: 30%;
+  cursor: pointer;
+  border: none;
+}
+.btn__continue {
+  background-color: rgb(245, 107, 107);
+  color: white;
+}
+.logo__warning {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.logo__modal {
+  height: 30%;
+}
+.highlight {
+  font-weight: bold;
+}
+.hidden {
+  display: none;
+}
