--- a/style.css
+++ b/style.css
@@ -231,12 +231,16 @@ a:visited {
   background-color: var(--color-dark--1);
 }
 .buttons button {
-  width: 25%;
-  height: 50%;
+  width: 20rem;
+  height: 5rem;
   background-color: var(--color-dark--2);
   cursor: pointer;
   color: white;
   border: 0.1px solid rgb(53, 53, 53);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column-reverse;
 }
 .modal {
   color: black;
@@ -288,4 +292,29 @@ a:visited {
 }
 .hidden {
   display: none;
+}
+.sort__options {
+  z-index: 1000;
+  background-color: var(--color-dark--2);
+  margin-top: -24.7rem;
+  position: relative;
+}
+.sort__options ul {
+  text-align: center;
+  list-style: none;
+  margin-bottom: 2rem;
+}
+.sort__options li {
+  width: 20rem;
+  padding: 2rem 0rem 2rem 0rem;
+  border-bottom: 0.1px solid var(--color-dark--1);
+  cursor: pointer;
+}
+.btn__sort {
+  z-index: 50295928;
+  columns: red;
+}
+.sort__options li:nth-child(1) {
+  background-color: var(--color-dark--1);
+  cursor: default;
 }
