--- a/style.css
+++ b/style.css
@@ -85,9 +85,16 @@ a:visited {
 }
 
 .workout__title {
+  display: flex;
+  justify-content: space-between;
   font-size: 1.7rem;
   font-weight: 600;
   grid-column: 1 / -1;
+}
+.exit {
+  position: relative;
+  top: -1.5rem;
+  right: -1rem;
 }
 
 .workout__details {
